--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@ h1 {
   font-size: 20px;
   padding: 5px 10px;
 }
+figure {
+  padding: 10px 10px;
+}
+figcaption {
+  color: red;
+  font-weight: 200;
+}
 h2 {
   color: rgba(0,0,0,0.5);
 }
