--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,12 @@ table {
 #serif {
   font-family: serif;
   font-weight: 300;
+  color: white;
+  background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
+  background-size: cover;
+  background-position: bottom center;
+  height: 700px;
+  width: 100%;
 }
 #bree {
   font-family: 'Bree+Serif';
