--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 #vary{
   border: 1px dotted blue;
   border-radius: 15px;
-  width: 500px;
+  width: 200px;
 }
 h1 {
   color: darkslategray;
@@ -23,16 +23,16 @@ h1 {
   font-size: 20px;
   font-family: monospace;
 }
-figure {
-  padding: 10px 10px;
-}
+
 figcaption {
   color: red;
   font-weight: 200;
 }
+
 h2 {
   color: rgba(0,0,0,0.5);
 }
+
 h3 {
   color: blue;
   padding: 10px;
@@ -44,45 +44,52 @@ table {
   font-family: san-serif;
   background-color: pink;
 }
+
 #portrait {
   height: 100px;
   width: 70px;
 }
+
 .list {
   padding: 0 10px;
   margin: 5px 10px;
 }
+
 .list h2 {
  color: black; 
 }
+
 #font{
   padding: 5px 10px;
   margin: 10px 10px;
 }
+
 .font {
   background-color: Ivory;
   padding: 5px;
 }
+
 #serif {
   font-family: serif;
   font-weight: 300;
   color: white;
   background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
-  background-size: cover;
-  background-position: bottom center;
-  height: 700px;
-  width: 100%;
+  background-size: 300px 100px;
+  background-position: center center;
 }
+
 #bree {
   font-family: 'Bree+Serif';
   font-size: 25px;
 }
+
 #mono{
   font-family: monospace;
   height: 25px;
   font-size: 30px;
   text-align: center;
 }
+
 footer{
   background-color: DarkSeaGreen;
 }
