--- a/styles.css
+++ b/styles.css
@@ -100,5 +100,6 @@ footer{
   background-color: DarkSeaGreen;
   text-align: center;
   font-family: monospace;
-  padding: 10px 10px;
+  padding: 100px 100px;
+  margin: 100px 100px;
 }
