--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,11 @@ h1 {
 }
 
 .list {
-    border: 1px solid LightGrey;
+  border: 1px solid LightGrey;
   padding: 40px 0px;
   position: relative;
   text-align: center;
-  width: 100%;
+  width: 100px;
 }
 
 
@@ -78,6 +78,7 @@ table {
 #serif {
   font-family: serif;
   font-weight: 300;
+  text-align: center;
   color: white;
   background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
   background-size: 300px 100px;
@@ -100,6 +101,6 @@ footer{
   background-color: DarkSeaGreen;
   text-align: center;
   font-family: monospace;
-  padding: 100px 100px;
-  margin: 100px 100px;
+  padding: 30px 30px;
+  margin: 20px 20px;
 }
