--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,9 @@ footer{
   padding: 30px 30px;
   margin: 20px 20px;
 }
+
+footer:hover {
+  background-color: #004E89;
+  border-color: #004E89;
+}
+
