--- a/styles.css
+++ b/styles.css
@@ -111,8 +111,9 @@ footer{
   margin: 20px 20px;
 }
 #portrait{
-  width:300px;
-  height: 500px;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
 }
 #portrait:hover {
   background-color: #004E89;
