--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,11 @@ button{
   background-color: yellow; 
   color: black;
   font-size: 20px;
+  border-radius: 15px;
 }
-
+button:hover{
+  background-color: red; 
+}
 figcaption {
   color: white;
   font-weight: 200;
