--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,44 @@
        url('../fonts/Glegoo-Regular.woff') format('woff'),
        url('../fonts/Glegoo-Regular.ttf') format('truetype')
 }
-
+#remgo {
+  background-color: darkslategray;
+  color: white;
+  font-size: 50px;
+  padding: 5px 10px;
+}
 .main {
   position: relative;
   padding: 5px;
 }
-
+#portrait{
+  width: 250px;
+  height: 300px;
+}
+figcaption {
+  color: white;
+  font-weight: 200;
+}
+#portrait:hover {
+  background-color: #004E89;
+  border-color: #004E89;
+}
+#port {
+  padding: 0 auto;
+}
+#san {
+  color: white;
+  font-size: 10px;
+  font-family: monospace;
+   width: 500px;
+  height: 100px;
+}
+#san:hover{
+  background-color: #004E89;
+}
+#introduce{
+  padding: 50px;
+}
 #vary{
   border: 1px dotted blue;
   border-radius: 15px;
@@ -18,17 +50,8 @@
 h1 {
   color: darkslategray;
 }
-#remgo {
-  background-color: darkslategray;
-  color: white;
-  font-size: 50px;
-  padding: 5px 10px;
-}
-#san {
-  color: red;
-  font-size: 20px;
-  font-family: monospace;
-}
+
+
 
 .list {
   border: 1px solid LightGrey;
@@ -115,18 +138,4 @@ footer{
   padding: 30px 30px;
   margin: 20px 20px;
 }
-#portrait{
-  width: 250px;
-  height: 300px;
-}
-figcaption {
-  color: white;
-  font-weight: 200;
-}
-#portrait:hover {
-  background-color: #004E89;
-  border-color: #004E89;
-}
-#port {
-  padding: 0 auto;
-}
+
