--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
   color: white;
   font-size: 50px;
   padding: 5px 10px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
 .main {
   position: relative;
