--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@
   position: relative;
   padding: 5px;
 }
+.introduce {
+  display: inline-block;
+}
 #portrait{
   width: 400px;
   height: 400px;
