--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
   background-color: darkslategray;
   color: white;
   font-size: 50px;
-  padding: 5px 10px;
+  position: fixed;
+  width: 100%;
 }
 .main {
   position: relative;
@@ -123,7 +124,7 @@ footer{
   background-color: DarkSeaGreen;
   text-align: center;
   font-family: monospace;
-  padding: 30px 30px;
-  margin: 20px 20px;
+  position: fixed;
+  width: 100%;
 }
 
