--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@
   position: fixed;
   width: 100%;
 }
+header {
+  background-color: #466995;
+  border-bottom: 1px solid #466995;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+}
 .main {
   position: relative;
   padding: 5px;
