--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ header {
   width: 100%;
   z-index: 10;
 }
+ul {
+  margin: 30px auto;
+  padding: 0 20px;
+  text-align: center;
+}
 li {
   color: #FFF;
   font-family: 'Oswald', sans-serif;
