--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,11 @@ header {
   width: 100%;
   z-index: 10;
 }
-ul {
+#remgo ul {
   margin: 0px auto;
   text-align: center;
 }
-li {
+#remgo li {
   color: #FFF;
   font-family: 'Oswald', sans-serif;
   font-size: 16px;
