--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,12 @@ header {
 }
 #remgo li {
   color: #FFF;
-  font-family: 'Oswald', sans-serif;
+  font-family: sans-serif;
   font-size: 16px;
   font-weight: 300;
   text-transform: uppercase;
   display: inline-block;
   width: 80px;
-  top: 50;
 }
 .main {
   position: relative;
