--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ header {
   color: white;
   font-size: 20px;
   text-align: center;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
 #remgo ul {
   margin: 0px auto;
