--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,10 @@ main{
   position: relative;
 }
 .introduce {
+  position: relative;
   width: 500px;
   height: 500px;
-  margin: 20px;
+  margin: 200px;
   top: 500px;
 }
 #portrait{
@@ -151,7 +152,7 @@ footer{
   background-color: DarkSeaGreen;
   text-align: center;
   font-family: monospace;
-  width: 500px;
+  width: 100%;
   height: 150px;
   bottom: 0;
   left: 200px;
