--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ main{
   position: relative;
 }
 .introduce {
-  position: relative;
+  display: inline-block;
   width: 500px;
   height: 500px;
   margin: 200px;
