--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ main{
   border: 1px dotted green;
   clear: left;
 }
-img {
+figure{
   width: 400px;
   height: 400px;
 }
@@ -53,7 +53,7 @@ figcaption {
   color: white;
   font-weight: 200;
 }
-img :hover {
+figure:hover {
   background-color: #004E89;
   border-color: #004E89;
 }
