--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ header {
   top: 0px;
   left: 0px;
   width: 100%;
+  height: 300px;
 }
 #remgo ul {
   margin: 0px auto;
@@ -33,15 +34,13 @@ header {
   border: 1px dotted white;
 }
 main{
-  margin: 200px;
-  top: 500px;
+  margin: 500px;
   position: relative;
 }
 .introduce {
   display: inline-block;
   width: 500px;
   height: 500px;
-  top: 500px;
   border: 1px dotted green;
   clear: left;
 }
