--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ header {
   border: 1px dotted green;
   clear: left;
   display: inline-block;
+  margin: 10px 0;
 }
 .container {
   margin: 0 auto;
