--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
 }
 #remgo li {
   color: #FFF;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Glegoo-Regular', sans-serif;
   font-size: 16px;
   font-weight: 300;
   text-transform: uppercase;
