--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,11 @@ figure:hover {
   width: 400px;
   padding: 50px 0px 50px;
 }
+#logo {
+  color: darkslategray;
+  text-align: center;
+  font-family: 'Oswald', sans-serif;
+}
 
 h1 {
   color: darkslategray;
