--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ header {
   top: 0px;
   left: 0px;
   width: 100%;
-  text-decoration: none;
+
 }
 #remgo ul {
   margin: 0px auto;
@@ -33,7 +33,10 @@ header {
   border: 1px dotted white;
   display: inline-block;
 }
-
+#remgo li:link {
+  text-decoration: none;
+  color: #FFF;
+}
 #remgo li:hover {
   opacity: 70%
 }
