--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ header {
   clear: both;
   display: table;
   text-decoration: none;
+  bottom:150px;
 }
 .introduce {
   width: 500px;
@@ -159,10 +160,10 @@ footer{
   background-color: DarkSeaGreen;
   text-align: center;
   font-family: monospace;
+  height: 100px;
+  top: 0px;
+  left: 0px;
   width: 100%;
-  height: 150px;
-  bottom: 0;
-  left: 200px;
   position: fixed;
 }
 
